MBS-12416: Avoid wrapping in menu links
Wrapping here would make sense if it avoided scrolling,
but it does not - it just makes the headers harder to read without adding
anything remotely responsive. As such, let's stop the wrapping for now
and recheck this once we have implemented the responsive
header that is in the works.

--- a/root/static/styles/layout.less
+++ b/root/static/styles/layout.less
@@ -158,6 +158,11 @@ pre code {
     margin-right: 16px;
     clear: both;
 
+    a {
+        // So menu links don't wrap (TODO: review with responsive header)
+        overflow-wrap: normal;
+    }
+
     img.logo {
         width: @logo-width;
         height: @logo-height;
